# computer-use-101

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: quality-review.sh  require-test.sh
.claude/skills/main/: SKILL.md
.claude/skills/test/: SKILL.md  smoke_test.py
computer_use_101/: config.py  logging.py
computer_use_101/minesweeper/: env.py  game.html  reward.py
config/: default.json
docs/: brainstorm.md  model-choice.md
docs/patterns/: configs.md  resource-initialization.md
docs/workflows/: testing.md
envs/minesweeper/: env.py  game.html
scripts/: plot_results.py  run.py  train_dqn.py
tests/: test_env.py  test_game_state.py  test_reward.py
