[project]
name = "computer-use-101"
version = "0.1.0"
description = "RL environments for browser-based tasks"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29",
    "playwright>=1.40",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
