[project]
name = "computer-use-101"
version = "0.1.0"
description = "RL environments for browser-based tasks"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.1.1",
    "playwright>=1.58.0",
    "Pillow>=11.3.0",
    "numpy>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]
rl = [
    "torch>=2.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
